@@ -1,5 +1,10 @@
 2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
+	* src/Backends/Sqlite/SqliteBackend.cs: Implement task deletion. Fixes
+	bug #551717, patch courtesy of Andreia Gaita and Stefan Schlott.
+
+2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
 	* src/TaskWindow.cs: Don't try to create a new TaskWindow if the backend
 	is not yet set. Fixes bug #564344.
 
